--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div/>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio text-left">
+                <div class="trainer-bio">
                   <h3>Arron Stephens</h3>
                   <h4>Speed / Strength</h4>
                   <p>
@@ -182,7 +182,7 @@
   <!-- third trainer bio -->
   <article class="trainer">
     <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-    <div class="trainer-bio text-left">
+    <div class="trainer-bio">
       <h3>Harry "the Headband" Smith</h3>
       <h4>Strength</h4>
       <p>
