--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                 Meet The Trainers
             </h2>
           <div/>
+          <div class="trainers">
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio">
@@ -168,7 +169,8 @@
               </article>
               <!-- second trainer bio -->
 <article class="trainer">
-    <div class="trainer-bio text-right">
+  <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+    <div class="trainer-bio">
       <h3>Joanna Gill</h3>
       <h4>Endurance</h4>
       <p>
@@ -176,7 +178,7 @@
         itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
       </p>
     </div>
-    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+    
   </article>
   
   <!-- third trainer bio -->
